projects/api-node/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  labels:
    app: api-node
  name: api-node
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: api-node
  type: ClusterIP
